<resources>
    <string name="app_name">Nomad Di</string>
    <string name="app_name_md"><font fgcolor='#ffd030'>Табыс</font> Партнер</string>
    <string name="main_menu_item_title">Главная</string>
    <string name="withdraw_menu_item_title">Вывод средств</string>
    <string name="support_menu_item_title">Поддержка</string>
    <string name="profile_menu_item_title">Профиль</string>
    <string name="profile_card_view_title">Мой профиль</string>
    <string name="profile_card_view_profile_name">Асангали \nТаир</string>
    <string name="balance_card_view_withdraw_label">Вывести деньги</string>
    <string name="balance_card_view_cash_amount">12,500 т</string>
    <string name="balance_card_view_balance_title">Мой баланс</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">+77003053030</string>
    <string name="change_password_btn_text">Изменить пароль</string>
    <string name="change_pin_code_btn_text">Изменить код быстрого доступа</string>
    <string name="invite_friend_btn_text">Пригласить друзей в приложение</string>
    <string name="invite_friend_title">Приглашение</string>
    <string name="invite_friend_hint">Номер вашего друга</string>
    <string name="invite_friend_btn">Пригласить друга</string>
    <string name="go_incomes_btn_text">Поступления от друзей</string>
    <string name="incomes_title">Поступления</string>
    <string name="history_title">История выводов</string>
    <string name="history_card_name">Название карты</string>
    <string name="history_account">Основной баланс</string>
    <string name="history_account_partner">Партнерский баланс</string>
    <string name="history_card_mask">**** **** **** %s</string>
    <string name="history_title_ref">История партнерских выводов</string>
    <string name="go_notifications_btn_text">Уведомления</string>
    <string name="notifications_title">Уведомления</string>
    <string name="profile_app_version">Версия приложения %s</string>
    <string name="btn_uploaded_title">Новая версия приложения загружена</string>
    <string name="btn_uploaded_desc">Перезапустить</string>
    <string name="with_draw_page_balance_title">Мой баланс</string>
    <string name="with_draw_page_balance_history_title">История</string>
    <string name="amount_hint">0</string>
    <string name="bottom_sheet_dialog_title">Карта для вывода</string>
    <string name="bottom_sheet_dialog_remove_card_title">Изменить</string>
    <string name="cancel_choose_bottom_sheet_dialog">ОТМЕНА</string>
    <string name="card_name_default">Kaspi Gold</string>
    <string name="add_card_text">Добавить карту</string>
    <string name="authorization_page_edit_text_hint">Введите номер телефона</string>
    <string name="authorization_page_continue_button_text">Продолжить</string>
    <string name="alert_password_recover_title">Восстановление</string>
    <string name="alert_password_recover_message">Вы уверены что хотите сделать восстановление пинкода?</string>
    <string name="accept">Да</string>
    <string name="accept2">ОК</string>
    <string name="errorAcceptanceCreditCard">Пожалуйста, проверьте правильность ввода номера кредитной карты, поле принимает только цифры (0-9)</string>
    <string name="decline">Отмена</string>
    <string name="error_length">Номер карты должен состоять из 16 цифр</string>
    <string name="change_pincode_title">Изменение пинкода</string>
    <string name="change_pincode_message">Вы уверены что хотите изменить пинкод?</string>
    <string name="logOut_title">Вы уверены что хотите выйти?</string>
    <string name="logOut_message">Выйти из приложения</string>
    <string name="error">Ошибка</string>
    <string name="error_message">Данный номер не зарегистрирован в нашей базе. Попробуйте еще раз.</string>
    <string name="delete_card_title">Вы точно хотите удалить карту?</string>
    <string name="delete_card_message">Если вы удалите карту, вам придётся добавить новую</string>
    <string name="error_empty">Заполните поля!</string>
    <string name="operation_ok">Операция прошла успешно! Ждите пополнения</string>
    <string name="internet_message">Убедитесь, что включен WI-FI или мобильный Интернет, и попробуйте еще раз.</string>
    <string name="internet_title">"Подключение к Интернету отсутствует"</string>
    <string name="retry">Повторить</string>
    <string name="otmenit">Отменить</string>
    <string name="notSameError">Номера карт не совпадают</string>
    <string name="income_sum">%s ₸</string>
    <string name="balance_menu">Мой счет</string>
    <string name="partners_menu">Партнерский счет</string>
    <string name="default_notification_channel_id">10003</string>
    <string name="refresh">Обновить</string>
    <string name="confirm">Продолжить</string>
    <string name="current_pin_code">Текущий код</string>
    <string name="create_pin_code">Придумайте код</string>
    <string name="repeat_password">Повторите код</string>
    <string name="confirm_auth">Подтвердить</string>
    <string name="loading">Загрузка . . .</string>
    <string name="forgot_pin_code">Забыли пинкод?</string>
    <string name="create_pin_code_with_four_letter">Создайте код быстрого доступа из 4 цифр</string>
    <string name="choose_park">Выбор парка</string>
    <string name="choose_park_element">Выберите парк</string>
    <string name="calculate_commission">Рассчитать комиссию</string>

</resources>