<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayoutVer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/logoRel"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_lock"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                app:srcCompat="@drawable/lock" />

            <ImageView
                android:id="@+id/iv_ok"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:alpha="0"
                android:contentDescription="@null"
                android:scaleX="0"
                android:scaleY="0"
                app:srcCompat="@drawable/ic_check_bold_24dp"
                app:tint="#66e75d" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_input_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:letterSpacing="0.02"
            android:text="@string/create_pin_code_with_four_letter"
            android:textColor="#000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoRel" />

        <LinearLayout
            android:id="@+id/code_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_input_tip"
            app:layout_constraintVertical_bias="0.328">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/current_pin_code"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_pin_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:boxStrokeColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/create_pin_code"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin_code_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:boxStrokeColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/repeat_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pin_code_verify_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:padding="16dp"
                    android:textSize="16sp"
                    app:boxStrokeColor="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/verify_pin_code_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity=""
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/confirm_auth"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/verify_codeFeedBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/loading"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_form" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/forgot_pin_code"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verify_codeFeedBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>