<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".main.MainPageFragment">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:iss_auto_cycle="false"
                    app:iss_delay="0"
                    android:elevation="4dp"
                    app:iss_error_image="@drawable/online_banner_ad_008"
                    app:iss_period="1000"
                    app:iss_placeholder="@drawable/online_banner_ad_008"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"

                    app:layout_constraintEnd_toEndOf="@id/imageSlider"
                    app:layout_constraintStart_toStartOf="@id/imageSlider"
                    app:layout_constraintTop_toBottomOf="@id/imageSlider">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/profile_info_btn"
                            android:layout_width="match_parent"
                            app:cardCornerRadius="10dp"
                            android:elevation="4dp"
                            android:layout_height="150dp"
                            android:layout_weight="1"
                            android:layout_margin="10dp"

                            >
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    >
                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/profile_card_view_title"
                                            android:textColor="@color/black"
                                            android:textStyle="bold"
                                            android:layout_marginTop="10dp"
                                            android:layout_marginStart="10dp"
                                            />
                                        <TextView
                                            android:id="@+id/profile_name_label"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/profile_card_view_profile_name"
                                            android:textStyle="bold"
                                            android:textSize="18sp"
                                            android:textColor="#00FF00"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="10dp"
                                            />
                                        <androidx.constraintlayout.widget.ConstraintLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            >

                                                <TextView
                                                    android:id="@+id/more_profile_btn"
                                                    android:layout_width="0dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_marginStart="10dp"
                                                    android:layout_weight="1"
                                                    android:text="Подробнее"
                                                    android:textSize="12sp"
                                                    android:textColor="@color/black"
                                                    android:textStyle="bold"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    app:layout_constraintVertical_bias="0.62" />

                                                <ImageView
                                                    android:layout_width="50dp"
                                                    android:layout_height="50dp"
                                                    android:layout_marginEnd="8dp"
                                                    android:layout_weight="1"
                                                    android:src="@drawable/ic_baseline_account_circle_24"
                                                    app:layout_constraintBottom_toBottomOf="@+id/more_profile_btn"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    app:layout_constraintTop_toTopOf="@+id/more_profile_btn" />
                                        </androidx.constraintlayout.widget.ConstraintLayout>
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/balance_info_btn"
                            android:layout_width="match_parent"
                            app:cardCornerRadius="6dp"
                            android:elevation="4dp"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    >
                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/balance_card_view_balance_title"
                                            android:textColor="@color/black"
                                            android:textStyle="bold"
                                            android:layout_marginTop="10dp"
                                            android:layout_marginStart="10dp"
                                            />
                                        <TextView
                                            android:id="@+id/amount_cash_name_label"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/balance_card_view_cash_amount"
                                            android:textStyle="bold"
                                            android:textSize="18sp"
                                            android:textColor="#00FF00"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="10dp"
                                            />
                                        <androidx.constraintlayout.widget.ConstraintLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            >

                                                <TextView
                                                    android:id="@+id/withdraw_btn"
                                                    android:layout_width="0dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_marginStart="10dp"
                                                    android:layout_weight="1"
                                                    android:text="@string/balance_card_view_withdraw_label"
                                                    android:textColor="@color/black"
                                                    android:textSize="12sp"
                                                    android:textStyle="bold"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    app:layout_constraintVertical_bias="0.75" />

                                                <ImageView
                                                    android:layout_width="50dp"
                                                    android:layout_height="50dp"
                                                    android:layout_marginEnd="8dp"
                                                    android:layout_weight="1"
                                                    android:src="@drawable/ic_baseline_attach_money_24"
                                                    app:layout_constraintBottom_toBottomOf="@+id/withdraw_btn"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    app:layout_constraintTop_toTopOf="@+id/withdraw_btn" />
                                        </androidx.constraintlayout.widget.ConstraintLayout>
                                </LinearLayout>

                        </androidx.cardview.widget.CardView>

                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>